--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.19.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jproxx11/Library.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jproxx11/Library/issues"
+  },
+  "homepage": "https://github.com/jproxx11/Library#readme"
 }
